--- a/src/classes/FlagCheckQueueable.cls
+++ b/src/classes/FlagCheckQueueable.cls
@@ -4,9 +4,10 @@
 
 public class FlagCheckQueueable implements Queueable, Database.AllowsCallouts {
     public void execute(QueueableContext context) {
+        FlagProtectionBypass.bypass = true;
         try {
-            Boolean isRed = FlagCache.checkFlag();
-            System.debug('Flag check result (from queueable): ' + isRed);
+            List<String> lst = FlagCache.checkFlag();
+            System.debug('Flag check result (from queueable): ' + lst);
         } catch (Exception e) {
             System.debug('Flag check failed in queueable: ' + e.getMessage());
             // Optionally store in custom object for monitoring
